--- a/src/templates/template.hbs
+++ b/src/templates/template.hbs
@@ -5,17 +5,19 @@
     <p> Capital:{{capital}}</p>
     <p>Population:{{population}}</p>
     <ul>
-        <p>Languages</p>
-        {{#each language}}
+        <p>Languages:</p>
+        {{#each languages}}
         <li>{{this.name}}</li>
         {{/each}}
     </ul>
 </div>
 <div class="flag-wrapper">
-    <img src="{{flag}}" alt="flag">
+    <img src="{{flag}}" alt="flag" class="img-flag" width="400" height="auto">
 </div>
 
 </li>
 
 {{/each}}
+
+
 
