--- a/src/templates/countriesList.hbs
+++ b/src/templates/countriesList.hbs
@@ -1,1 +1,7 @@
-<li class="listCountry">{{name}}</li>
+<ul class='list'>
+  {{#each this}}
+    <li class='item'>
+      {{name}}
+    </li>
+  {{/each}}
+</ul>
